# financial-concepts

./: .copy.env  Dockerfile  README.md  pyproject.toml
data/: F-F_Research_Data_Factors_daily.csv  model_comparison.csv  treasury_yield_curve.csv
notebooks/: death_golden_cross.ipynb  death_golden_cross_plotly.ipynb  event_study_analysis.ipynb  fixed_amount.ipynb  q1_earnings_impact.ipynb  scrape_yield_curve_data.ipynb  semicon_stocks.ipynb  yield_curve.ipynb
scripts/: build.sh  run.sh
src/: Introduction.py  __init__.py  main.py  streamlit.py
src/pages/: 1_2024_Q1_Earnings_Analysis.py  1_Golden_Cross_Death_Cross.py  1_golden_death_cross.py  2_The_Yield_Curve.py  3_Event_Study_Analysis.py  4_Golden_Cross_Death_Cross.py
src/pages/texts/event_study_analysis/: demo.md  demo_results.md  overview.md  statistical_analysis.md  statistical_results.md
src/pages/texts/golden_cross_death_cross/: analysis.md  backtest_conditions.md  mva.md
src/pages/texts/the_yield_curve/: overview.md  spread.md  types_of_yield_curve.md  yield_3d.md  yield_and_spy.md  yield_curve_explanation.md
src/scrape/: yield_curve.py
src/utils/: __init__.py  ticker.py  trader.py
src/utils/strategy/: golden_death_cross.py
