[tool.poetry]
name = "market-sentiment-outlook"
version = "0.1.0"
description = ""
authors = ["Howard Tangkulung <howardtangkulung@gmail.com>"]
readme = "README.md"
packages = [{include = "market_sentiment_outlook"}]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.43"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
