[tool.poetry]
name = "financial-concepts"
version = "0.1.0"
description = ""
authors = ["Howard Tangkulung <howardtangkulung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.43"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
jupyterlab = "^4.2.5"
plotly = "5.24"
streamlit = "^1.38.0"
quandl = "^3.7.0"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
scipy = "^1.14.1"
streamlit-js-eval = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
